updated schema regarding to front-end changes
